Fix tips and small images being squished in the preview.

--- a/colorsplit.css
+++ b/colorsplit.css
@@ -53,3 +53,7 @@ p {
 #output {
 	margin-left: 1vw;
 }
+
+ul.tiplist > li {
+	margin: 1em;
+}
